[package]
name = "kalozino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
poise = { version = "0.6.1", features = ["cache", "chrono", "handle_panics"] }
tokio = { version = "1.35.1", features = ["tracing", "full"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
chrono = { version = "0.4.31", features = ["serde"] }
rand = { version = "0.8.5", features = ["nightly"] }
ormlite = { version = "0.18.0", features = [
    "default-postgres",
    "chrono",
    "uuid",
] }
uuid = { version = "1.6.1", features = ["serde"] }
serde_json = { version = "1.0", features = ["alloc"] }
tracing = { version = "0.1", features = [
    "async-await",
    "log",
    "release_max_level_info",
    "max_level_debug",
] }
tracing-subscriber = { version = "0.3", features = [
    "chrono",
    "env-filter",
    "tracing",
    "serde",
    "tracing-serde",
] }
tracing-appender = "0.2.3"
anyhow = { version = "1.0.79", features = ["backtrace"] }
futures = "0.3.30"
